2009-02-20  Jaroslav Hajek  <highegg@gmail.com>

	* ov-base-mat.cc (octave_base_matrix<MT>::do_index_op):
	Correctly compute all-scalar index.
	* ov-cell.cc (octave_cell::is_sorted, octave_cell::is_sorted_rows):
	New methods.
	* ov-cell.h: Declare them.
	* ov-cell.cc (octave_cell::sort): Create result already with
	cellstr_cache.

2009-02-20  John W. Eaton  <jwe@octave.org>

	* ov-base-mat.cc (octave_base_matrix<MT>::assign):
	Correctly compute all-scalar index.

	* symbtab.cc (symbol_table::stash_dir_name_for_subfunctions):
	New function.
	* symtab.h: Provide decl.
	* parse.y (load_fcn_from_file): Call it after parsing a function.

2009-02-19  Jaroslav Hajek  <highegg@gmail.com>

	* ov-cell.h (octave_cell::cellstr_cache): New field.
	(octave_cell::clear_cellstr_cache, octave_cell::make_cellstr_cache,
	octave_cell::assign, octave_cell::delete_elements,
	octave_cell::mex_get_data): New methods.
	(octave_cell::is_cellstr): Reuse cellstr cache if possible, create if
	successful.
	(octave_cell::cellstr_value): Reuse cellstr cache if possible.
	(octave_cell::subsasgn): Clear cellstr cache.

2009-02-19  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/lookup.cc (Flookup): Use Array<T>::lookup if possible.
	Do not compare octave_values directly. Properly check for iscellstr.

2009-02-19  John W. Eaton  <jwe@octave.org>

	* data.cc, graphics.cc, help.cc, lex.l, load-path.cc, parse.y:
	Consistent doc strings for internal functions.

2009-02-18  John W. Eaton  <jwe@octave.org>

	* ov.cc (convert_to_octave_idx_type_array): New static function.
	(octave_value::octave_idx_type_vector_value): New function.
	* ov.h (octave_value::octave_idx_type_vector_value): Provide decl.
	* DLD-FUNCTIONS/qr.cc (Fqrdelete, Fqrinsert): Use it to convert
	octave_value object to array of octave_idx_type values.

	* DLD-FUNCTIONS/find.cc (find_nonzero_elem_idx): Likewise.
	* DLD-FUNCTIONS/time.cc (strptime): Likewise.
	* DLD-FUNCTIONS/quad.cc (Fquad): Eliminate unnecessary cast.